--- a/.github/workflows /feature-engineering.yml
+++ b/.github/workflows /feature-engineering.yml
@@ -31,8 +31,8 @@ jobs:
 
     - name: Commit and Push Processed Data (Optional)
       run: |
-        git config --global user.name "Your Name"
-        git config --global user.email "your.email@example.com"
+        git config --global user.name "mahi-DR"
+        git config --global user.email "desireddy.mahiswar.2002@gmail.com"
         git add processed_data.csv
         git commit -m "Add processed data for feature engineering"
         git push
